2005-07-12 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added labelrefcounting for peepholes
	  (patch #1144962), added peephole 300, enabled 259.x
	* doc/sdccman.lyx: removed screenshot and provided link instead

2005-07-05 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: added section about debugging with ddd
	* doc/figures/ddd_example.eps: screenshot of debugging session

2005-07-04 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genPointerGet): handle pointers to CONST values
	  like CODE pointers, fixes #1115683
	* src/pic/pcode.c (DoBankSelect): forget LastRegIdx during function
	  call, fixes bugs #1232211, #1228110,
	  fixed wrong casts to pCodeFlow from pCodeInstructions

2005-07-04 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (popGet): changed assert to allow for
	  bit operands
	* (popGetAddr): changed signature to provide
	  an additional index, patched all call sites
	* (genCmpEq): handle literal-like operands correctly
	* (genAddrOf): added sanity checks on __code/__data pointers
	* (genAssign): added handling of symbols from __code section
	* (gencjne): do not generate code for comparisons whose result
	  is neither stored nor used, fixes bug #1171114
	* (AccLsh, AccRsh): operate on operand instead of WREG
	* (shift{Left,Right}_Left2ResultLit): NEW, size independant
	  replacement for Shift{LR}{12}Left2Result; shift (byte/int/long)
	  by known count
	* rewrote complete shift-by-literal logic, commented unused
	  functions out
	* (genConstPointerGet): get multiple bytes (if result size > 1),
	  fixed handling of non-immediate addresses
	* (genPointerGet): handle CODE pointers like CONST pointers
	* (genpic14Code): insert C-SRC lines as Cource-pCodes
	* ({aop,op}_isLitLike): NEW, single place to decide whether an
	  operand is to be treated as a literal or not
	* (mov2w,genPcall,genCmpEq),
	  src/pic/genarith.c: use aop_isLitLike() to decide between
	  literal/register contents